--- a/css/practical9.css
+++ b/css/practical9.css
@@ -120,7 +120,9 @@
   #team4{
       background-image: url('../Assests/team4.png');
   }
-
+.icon{
+    display: none;
+}
   .section-2 {
     height: 610px;
     text-align: center;
@@ -354,6 +356,42 @@
       .article{
           height: 32.3%;
           margin-bottom: 20px;
+      }
+      
+  }
+
+  @media screen and (max-width:800px) {
+      .icon{
+          display: block;
+          position: absolute;
+          right: 20px;
+      }
+      .icon i{
+          color: white;
+          background-color: black;
+          font-size: 25px;
+          /* margin-right: 0; */
+      }
+      .icon input{
+          visibility: hidden;
+          margin: 0;
+          position: absolute;
+          right: 0px;
+      }
+      .header ul{
+        position: fixed;
+        top: 0;
+        right:-100%;
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+        text-align: center;
+        padding: 80px 0;
+        transition: .7s;
+
+    }
+      .icon input:checked ~ .header ul{
+          right:0;
       }
       
   }
